panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__preprocessor__include__split-if-directive__test_error_if_false.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/preprocessor/include/split-if-directive/test_error_if_false.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: unterminated `#if` directive
   ╭─[panko/tests/cases/preprocessor/include/split-if-directive/if_false.h:1:1]
   │
 1 │ #if false
   │ ─┬─  
   │  ╰─── this directive does not have a corresponding `#endif`
───╯

Error: `#else` not preceded by `#if`
   ╭─[panko/tests/cases/preprocessor/include/split-if-directive/test_error_if_false.c:2:1]
   │
 2 │ #else
   │ ──┬──  
   │   ╰──── this `#else` does not have a matching `#if`
───╯

Error: use of undeclared identifier `puts`
   ╭─[panko/tests/cases/preprocessor/include/split-if-directive/test_error_if_false.c:7:5]
   │
 7 │     puts("it doesn’t work");
   │     ──┬─  
   │       ╰─── this name has not been declared
───╯
